Add nav, footer, pages and about section HTML

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,50 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <nav class="nav">
+    <ul class="nav__list">
+      <li class="nav__item">
+        <a href="#about" class="nav__link">About</a>
+      </li>
+      <li class="nav__item">
+        <a href="#finder" class="nav__link">Finder</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="container">
+    <div id="pages">
+      <section id="about">
+        <div class="brand-logo">
+          <h1 class="logo-title">Pathfinder</h1>
+          <h2 class="logo-subtitle">For travellers</h2>
+        </div>
+        <div class="card">
+          <div class="card__image">
+            <img src="images/1.jpg" alt="women at the desert">
+          </div>
+          <div class="cart__content">
+            <h2 class="content__title">Plan Your Journeys</h2>
+            <h3 class="content__subtitle">Pick attractions and book hotels</h3>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__image">
+            <img src="images/2.jpg" alt="women at the desert">
+          </div>
+          <div class="cart__content">
+            <h2 class="content__title">Minimalize Boredom</h2>
+            <h3 class="content__subtitle">Pick routes that are short and attractive</h3>
+          </div>
+        </div>
+      </section>
+      <footer class="footer">
+        <p class="footer__copyright">All rights reserved</p>
+      </footer>
+      <section id="finder">
+
+      </section>
+    </div>
+  </div>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script type="module" src="js/script.js"></script>
 </body>
