--- a/src/index.html
+++ b/src/index.html
@@ -23,28 +23,28 @@
     </ul>
   </nav>
   <div class="container">
+    <div class="splash">
+      <h1 class="logo-title">Pathfinder</h1>
+      <h2 class="logo-subtitle">For travellers</h2>
+    </div>
     <div id="pages">
       <section id="about">
-        <div class="brand-logo">
-          <h1 class="logo-title">Pathfinder</h1>
-          <h2 class="logo-subtitle">For travellers</h2>
-        </div>
-        <div class="card">
-          <div class="card__image">
+        <div class="card" data-aos="fade-right" data-aos-anchor-placement="bottom-bottom">
+          <div class="card__image card__image--normal">
             <img src="images/1.jpg" alt="women at the desert">
-          </div>
-          <div class="cart__content">
-            <h2 class="content__title">Plan Your Journeys</h2>
-            <h3 class="content__subtitle">Pick attractions and book hotels</h3>
+            <div class="card__content card__content--lower card__content--left">
+              <h2 class="content__title">Plan Your Journeys</h2>
+              <h3 class="content__subtitle">Pick attractions and book hotels</h3>
+            </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card__image">
+        <div class="card" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <div class="card__image card__image--wide card__image--right">
             <img src="images/2.jpg" alt="women at the desert">
-          </div>
-          <div class="cart__content">
-            <h2 class="content__title">Minimalize Boredom</h2>
-            <h3 class="content__subtitle">Pick routes that are short and attractive</h3>
+            <div class="card__content card__content--upper card__content--right">
+              <h2 class="content__title">Minimalize Boredom</h2>
+              <h3 class="content__subtitle">Pick routes that are short and attractive</h3>
+            </div>
           </div>
         </div>
       </section>
@@ -57,6 +57,7 @@
     </div>
   </div>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init();</script>
   <script type="module" src="js/script.js"></script>
 </body>
 </html>
