Move finder section to the correct place in HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -48,13 +48,14 @@
           </div>
         </div>
       </section>
-      <footer class="footer">
-        <p class="footer__copyright">All rights reserved</p>
-      </footer>
       <section id="finder">
-
+        <h2 class="section__title">Draw Routes</h2>
+        <div class="pathfinder-grid"></div>
       </section>
     </div>
+    <footer class="footer">
+      <p class="footer__copyright">All rights reserved</p>
+    </footer>
   </div>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init();</script>
