Add helper classes and pathfinder controls button

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,9 @@
         </div>
       </section>
       <section id="finder">
-        <h2 class="section__title">Draw Routes</h2>
+        <h2 class="section__title pathfinder-message">Draw Routes</h2>
         <div class="pathfinder-grid"></div>
+        <button class="btn-primary pathfinder-controls">Finish Drawing</button>
       </section>
     </div>
     <footer class="footer">
