Add button type

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       <section id="finder">
         <h2 class="section__title pathfinder-message">Draw Routes</h2>
         <div class="pathfinder-grid"></div>
-        <button class="btn-primary pathfinder-controls">Finish Drawing</button>
+        <button type="submit" class="btn-primary pathfinder-controls">Finish Drawing</button>
       </section>
     </div>
     <footer class="footer">
