Add HTML for toast popup box

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="toast">
+    <p class="toast__text"></p>
+  </div>
   <nav class="nav">
     <ul class="nav__list">
       <li class="nav__item">
