--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     </div>
     <div id="pages">
       <section id="about">
-        <div class="card" data-aos="fade-right" data-aos-anchor-placement="bottom-bottom">
+        <div class="card" data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" data-aos-offset="200">
           <div class="card__image card__image--normal">
             <img src="images/1.jpg" alt="women at the desert">
             <div class="card__content card__content--lower card__content--left">
