Add data attributes for AOS animations and move footer outside the container div

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     </div>
     <div id="pages">
       <section id="about">
-        <div class="card" data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" data-aos-offset="200">
+        <div class="card" data-aos="opacity-fade-ltr" data-aos-anchor-placement="bottom-bottom" data-aos-offset="100" data-aos-duration="500">
           <div class="card__image card__image--normal">
             <img src="images/1.jpg" alt="women at the desert">
             <div class="card__content card__content--lower card__content--left">
@@ -41,7 +41,7 @@
             </div>
           </div>
         </div>
-        <div class="card" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+        <div class="card" data-aos="opacity-fade-rtl" data-aos-anchor-placement="center-bottom" data-aos-duration="500">
           <div class="card__image card__image--wide card__image--right">
             <img src="images/2.jpg" alt="women at the desert">
             <div class="card__content card__content--upper card__content--right">
@@ -57,10 +57,10 @@
         <button type="submit" class="btn-primary pathfinder-controls">Finish Drawing</button>
       </section>
     </div>
-    <footer class="footer">
-      <p class="footer__copyright">All rights reserved</p>
-    </footer>
   </div>
+  <footer class="footer">
+    <p class="footer__copyright">All rights reserved</p>
+  </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init();</script>
   <script type="module" src="js/script.js"></script>
