--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,24 @@
   <div class="toast">
     <p class="toast__text"></p>
   </div>
+  <div class="rules">
+    <h2 class="rules__title">How to use:</h2>
+    <div class="rules__container">
+      <h3 class="rules__subtitle">Drawing the path</h3>
+      <p class="rules__text">Left click on a cell to add it to a path, if you change your mind you can remove the cell from the path by clicking it again.</p>
+      <img class="rules__img" src="images/stage1rule.gif" alt="path selection">
+    </div>
+    <div class="rules__container">
+      <h3 class="rules__subtitle">Selecting start/end points</h3>
+      <p class="rules__text">Double click on an active cell to make it a start/end point. double click again to unstage it.</p>
+      <img class="rules__img" src="images/stage2rule.gif" alt="start/end selection">
+    </div>
+    <div class="rules__container">
+      <h3 class="rules__subtitle">Shortest path generation</h3>
+      <p class="rules__text">After selecting the points click "compute" button. the pathfinder will show you the shortest route!</p>
+      <img class="rules__img" src="images/stage3rule.png" alt="marked route">
+    </div>
+  </div>
   <nav class="nav">
     <ul class="nav__list">
       <li class="nav__item">
