Add structure of summary popup

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,23 @@
   <div class="toast">
     <p class="toast__text"></p>
   </div>
+  <div class="summary">
+    <h2 class="summary__title">Summary</h2>
+    <div class="summary__content">
+      <div class="row">
+        <h3 class="summary__subtitle">Full route: <span class="route-length"></span></h3>
+      <p class="summary__text">fields</p>
+      </div>
+      <div class="row">
+        <h3 class="summary__subtitle">Generated paths: <span class="paths-number"></span></h3>
+      </div>
+      <div class="row">
+        <h3 class="summary__subtitle">Shortest route: <span class="route-shortest"></span></h3>
+        <p class="summary__text">fields</p>
+      </div>
+    </div>
+    <button type="button" class="btn-primary btn-hide">Close</button>
+  </div>
   <div class="rules">
     <h2 class="rules__title">How to use</h2>
     <div class="rules__container">
@@ -44,7 +61,7 @@
         <img class="img" src="images/stage3rule.png" alt="marked route">
       </div>
     </div>
-    <button type="button" class="btn-primary rules-hide">Got it</button>
+    <button type="button" class="btn-primary btn-hide">Got it</button>
   </div>
   <nav class="nav">
     <ul class="nav__list">
