rename img class

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         <p class="content-box__text">Click on a cell to select it. If you change your mind click on an active cell to unstage it.</p>
       </div>
       <div class="rules__img">
-        <img class="img" src="images/stage1rule.gif" alt="path selection">
+        <img class="image" src="images/stage1rule.gif" alt="path selection">
       </div>
     </div>
     <div class="rules__container">
@@ -49,7 +49,7 @@
         <p class="content-box__text">Double click on an active cell to make it a start/end point. Double click again to unstage it.</p>
       </div>
       <div class="rules__img">
-        <img class="img" src="images/stage2rule.gif" alt="start/end selection">
+        <img class="image" src="images/stage2rule.gif" alt="start/end selection">
       </div>
     </div>
     <div class="rules__container">
@@ -58,7 +58,7 @@
         <p class="content-box__text">After selecting the points click the "compute" button. The pathfinder will show you the shortest route!</p>
       </div>
       <div class="rules__img">
-        <img class="img" src="images/stage3rule.png" alt="marked route">
+        <img class="image" src="images/stage3rule.png" alt="marked route">
       </div>
     </div>
     <button type="button" class="btn-primary btn-hide">Got it</button>
