Add fon awesome CDN kit and side nav html

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700;800&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/03afaa2c55.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="side-nav">
+    <h3 class="side-nav__title">Alternative paths</h3>
+    <div class="buttons-box">
+      <button type="button" class="btn-primary prev">
+        <i class="fa-solid fa-angle-left"></i>
+      </button>
+      <button type="button" class="btn-primary next">
+        <i class="fa-solid fa-angle-right"></i>
+      </button>
+    </div>
+  </div>
   <div class="toast">
     <p class="toast__text"></p>
   </div>
