--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <div class="side-nav">
+    <i class="fa-solid fa-arrow-left side-nav__arrow"></i>
     <h3 class="side-nav__title">Alternative paths</h3>
     <div class="buttons-box">
       <button type="button" class="btn-primary prev">
